--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Backend application </description>
 	<properties>
 		<java.version>17</java.version>
+		<springdoc.version>1.2.32</springdoc.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -36,6 +37,25 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- <dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.2.32</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
