--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# custom path for swagger-ui
+# http://localhost:8080/observatorio-suelo-ms/swagger-ui-custom.html
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.swagger-ui.operationsSorter=method
+
+springdoc.api-docs.path=/api-docs
+springdoc.version=@springdoc.version@
+
+spring.main.allow-circular-references=true
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
